2005-12-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter:
		Write pinvoke infos as well.

	* Mono.Cecil/ReflectionReader.cs:
		Unsure that primitive value types are viewed as
		value types.

	* CodeGen/templates/Section.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/Section.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Simplify the way you read binary data whithin
		high level layer.

	* Mono.Cecil.Cil/CodeReader.cs:
		Make helper methods public static.
	* Mono.Cecil/ReflectionReader.cs:
		Don't try to get the entry point method
		if it don't point on a valid method RID.

	* CodeGen/templates/NamedCollectionImplem.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  Mono.Cecil/TypeReferenceCollection.cs:
		Don't add existing values.

	* Mono.Cecil/ModuleDefinition.cs:
		Protect import from null refs.

2005-12-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureWriter.cs:
		Don't increment pdb age. Not Cecil's job.

	* Mono.Cecil.Cil/ICilWorker.cs
	  Mono.Cecil.Cil/CilWorker.cs:
		Add a new replace method.

2005-12-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureWriter.cs:
		Ensure every assembly reference is processed.

	* Mono.Cecil/ReflectionHelper.cs:
		Don't assume the cache is magically loaded.
		Aka: most stupid bug of the year.

2005-12-19  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/DebugHeader.cs
	  Mono.Cecil.Binary/DebugHeader.cs
	  Mono.Cecil.Binary/DebugStoreType.cs:
		New files to store debug header infos.
	* Mono.Cecil.dll.sources: updated
	* CodeGen/cecil.xml
	  CodeGen/cecil-gen.rb
	  Mono.Cecil/StructureWriter.cs
	  Mono.Cecil.Binary/IBinaryVisitor.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/BaseImageVisitor.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs: